Navbar, profile div, title done.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,22 @@
 <body>
     <!--Header-->
     <header id="header">
-      <h1><a href="#landing" class="scrollto">Coloc'O'max</a></h1>
+        <div class="row">
+            <h1 class="col-lg-4" ><a href="#landing" class="scrollto">Coloc'O'max</a></h1>
+            <div id="navbar" class="col-lg-6">
+                <div class="row">
+                    <h3><a href="" class="col-lg-2">Dashboard</a></h3>
+                    <h3><a href="" class="col-lg-2">Dépenses</a></h3>
+                    <h3><a href="" class="col-lg-2">Colocs</a></h3>
+                    <h3><a href="" class="col-lg-2">Agenda</a></h3>
+                    <h3><a href="" class="col-lg-2">Paramètres</a></h3>
+                </div>  
+            </div>
+            <div id="profile" class="col-lg-2">
+                <p id="username">@Lilypichu</p>
+                <img class="img-fluid" id="avatar" src="img/lily.jpg"><a href=#></a></img>
+            </div>
+        </div>
     </header>
     <!--Fin Header-->
 
