--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h1 class="col-lg-4" ><a href="#landing" class="scrollto">Coloc'O'max</a></h1>
             <div id="navbar" class="col-lg-6">
                 <div class="row">
-                    <h3><a href="" class="col-lg-2">Dashboard</a></h3>
+                    <h3 class="current-page"><a href="" class="col-lg-2">Dashboard</a></h3>
                     <h3><a href="" class="col-lg-2">Dépenses</a></h3>
                     <h3><a href="" class="col-lg-2">Colocs</a></h3>
                     <h3><a href="" class="col-lg-2">Agenda</a></h3>
@@ -50,13 +50,28 @@
     <!--Fin Header-->
 
     <!-- Section Landing de la page -->
-    <div class="container-fluid">
-        <div class="row">
+
     <section id="landing">
-            
+        <div class="landing-text">
+            <div class="row">
+                <div class="col-lg-2"></div>
+
+                <div class="col-lg-8">
+                    <h1 class="title animated zoomIn">Prêt pour une coloc' ?</h1>
+                    <p>Revenez plus tard, nous sommes en train de paufiner la future plateforme qui facilitera les points importants de votre colocation !</p>
+                </div>
+
+                <div class="col-lg-2"></div>   
+            </div> 
+        </div>
+        <div class="landing-img">
+            <div class="row">
+                <div class="col-lg-2"></div>
+                <div class="col-lg-8"></div>
+                <div class="col-lg-2"></div>
+            </div>
+        </div>
     </section>
-</div>
-</div>
 
 <!-- JavaScript Libraries -->
 <script src="lib/jquery/jquery.min.js"></script>
