Animation sur le texte du landing

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
                 <div class="col-lg-8">
                     <h1 class="title animated zoomIn">Prêt pour une coloc' ?</h1>
-                    <p>Revenez plus tard, nous sommes en train de paufiner la future plateforme qui facilitera les points importants de votre colocation !</p>
+                    <p class="animated zoomIn">Revenez plus tard, nous sommes en train de paufiner la future plateforme qui facilitera les points importants de votre colocation !</p>
                 </div>
 
                 <div class="col-lg-2"></div>   
