--- a/assets/menu/menu_loggedin.html
+++ b/assets/menu/menu_loggedin.html
@@ -6,7 +6,7 @@ $monHTML_menu = <<<HTML
             <h1 class="col-lg-3" ><a href="#landing" class="scrollto">Coloc'O'max</a></h1>
             <div id="navbar" class="col-lg-6">
                 <div class="row">
-                    <h3><a href="" class="col-lg-2">Dashboard</a></h3>
+                    <h3><a href="dashboard.php" class="col-lg-2">Dashboard</a></h3>
                     <h3><a href="" class="col-lg-2">Dépenses</a></h3>
                     <h3><a href="" class="col-lg-2">Colocs</a></h3>
                     <h3><a href="" class="col-lg-2">Agenda</a></h3>
@@ -14,7 +14,7 @@ $monHTML_menu = <<<HTML
                 </div>  
             </div>
             <div id="profile" class="col-lg-3">
-                <p id="username">@{$username->getPseudo()}</p>
+                <p id="username">@{$_SESSION['user']->getPseudo()}</p>
                 <img class="img-fluid" id="avatar" src="img/lily.jpg"><a href=#></a></img>
             </div>
         </div>
