--- a/assets/menu/menu_loggedin.html
+++ b/assets/menu/menu_loggedin.html
@@ -1,27 +1,18 @@
-<?php
-
-$monHTML_menu = <<<HTML
 <header id="header">
-        <div class="row">
-            <h1 class="col-lg-3" ><a href="#landing" class="scrollto">Coloc'O'max</a></h1>
-            <div id="navbar" class="col-lg-6">
-                <div class="row">
-                    <h3  class="current-page"><a href="dashboard.php" class="col-lg-2">Dashboard</a></h3>
-                    <h3><a href="" class="col-lg-2">Dépenses</a></h3>
-                    <h3><a href="" class="col-lg-2">Colocs</a></h3>
-                    <h3><a href="" class="col-lg-2">Agenda</a></h3>
-                    <h3><a href="" class="col-lg-2">Paramètres</a></h3>
-                </div>  
-            </div>
-            <div id="profile" class="col-lg-3">
-                <p id="username">@{$_SESSION['user']->getPseudo()}</p>
-                <img class="img-fluid" id="avatar" src="img/lily.jpg"><a href=#></a></img>
-            </div>
+    <div id="menu" class="row animated fadeIn">
+        <h1 class="col-lg-3" ><a href="#landing">Coloc'O'max</a></h1>
+        <div id="navbar" class="col-lg-6">
+            <div class="row">
+                <h3 id="dashboard"><a href="dashboard.php" class="col-lg-2">Dashboard</a></h3>
+                <h3 id="depense"><a href="" class="col-lg-2">Dépenses</a></h3>
+                <h3 id="colocs"><a href="" class="col-lg-2">Colocs</a></h3>
+                <h3 id="agenda"><a href="" class="col-lg-2">Agenda</a></h3>
+                <h3 id="parametres"><a href="" class="col-lg-2">Paramètres</a></h3>
+            </div>  
         </div>
-    </header>
-HTML
-;
-
-echo $monHTML_menu;
-
-?>
+        <div id="profile" class="col-lg-3">
+            <p id="username"></p>
+            <img class="img-fluid" id="avatar" src="img/lily.jpg"><a href=#></a></img>
+        </div>
+    </div>
+</header>
