--- a/assets/menu/menu_loggedin.html
+++ b/assets/menu/menu_loggedin.html
@@ -11,8 +11,13 @@
             </div>  
         </div>
         <div id="profile" class="col-lg-3">
-            <p id="username"></p>
+            <p id="username" class="btn dropdown-toggle" type="button" data-toggle="dropdown"></p>
             <img class="img-fluid" id="avatar" src="img/lily.jpg"><a href=#></a></img>
+            <ul class="dropdown-menu">
+                <li><a href="#">Option 1</a></li>
+                <li><a href="#">Option 2</a></li>
+                <li><a href="deconnexion.php">Se déconnecter</a></li>
+            </ul>
         </div>
     </div>
 </header>
