Ajout d'une page colocs avec deux formulaire permettant de créer ou rejoindre une colocation.

--- a/assets/menu/menu_loggedin.html
+++ b/assets/menu/menu_loggedin.html
@@ -1,11 +1,11 @@
 <header id="header">
     <div id="menu" class="row animated fadeIn">
-        <h1 class="col-lg-3" ><a href="#landing">Coloc'O'max</a></h1>
+        <h1 class="col-lg-3" ><a href="">Coloc'O'max</a></h1>
         <div id="navbar" class="col-lg-6">
             <div class="row">
                 <h3 id="dashboard"><a href="dashboard.php" class="col-lg-2">Dashboard</a></h3>
                 <h3 id="depense"><a href="" class="col-lg-2">Dépenses</a></h3>
-                <h3 id="colocs"><a href="" class="col-lg-2">Colocs</a></h3>
+                <h3 id="colocs"><a href="colocs.php" class="col-lg-2">Colocs</a></h3>
                 <h3 id="agenda"><a href="" class="col-lg-2">Agenda</a></h3>
                 <h3 id="parametres"><a href="" class="col-lg-2">Paramètres</a></h3>
             </div>  
