--- a/assets/menu/menu_visiteur.html
+++ b/assets/menu/menu_visiteur.html
@@ -1,6 +1,6 @@
 <header id="header">
         <div class="row">
-            <h1 class="col-lg-10" ><a href="#landing" class="scrollto">Coloc'O'max</a></h1>
+            <h1 class="col-lg-10" ><a href="" class="scrollto">Coloc'O'max</a></h1>
             <div id="profile" class="col-lg-2">
                 <p id="username"><a class="connect" href='connexion.php'>Se connecter</a></p>
                 <img class="img-fluid" id="avatar" src="img/blank-user.png"><a href=#></a></img>
