--- a/assets/menu/menu_loggedin.html
+++ b/assets/menu/menu_loggedin.html
@@ -11,7 +11,7 @@
             </div>  
         </div>
         <div id="profile" class="col-lg-3">
-            <p id="username" class="btn dropdown-toggle" type="button" data-toggle="dropdown"></p>
+            <p id="username" class="btn dropdown-toggle" data-toggle="dropdown"></p>
             <img class="img-fluid" id="avatar" src="img/lily.jpg"><a href=#></a></img>
             <ul class="dropdown-menu">
                 <li><a href="#">Option 1</a></li>
